; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_trace_iterator_increment.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace.c_trace_iterator_increment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_iterator = type { i64, i64*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.trace_iterator*)* @trace_iterator_increment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @trace_iterator_increment(%struct.trace_iterator* %0) #0 {
  %2 = alloca %struct.trace_iterator*, align 8
  store %struct.trace_iterator* %0, %struct.trace_iterator** %2, align 8
  %3 = call i32 (...) @ftrace_disable_cpu()
  %4 = load %struct.trace_iterator*, %struct.trace_iterator** %2, align 8
  %5 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %4, i32 0, i32 2
  %6 = load i32, i32* %5, align 8
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %5, align 8
  %8 = load %struct.trace_iterator*, %struct.trace_iterator** %2, align 8
  %9 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %8, i32 0, i32 1
  %10 = load i64*, i64** %9, align 8
  %11 = load %struct.trace_iterator*, %struct.trace_iterator** %2, align 8
  %12 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = getelementptr inbounds i64, i64* %10, i64 %13
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %1
  %18 = load %struct.trace_iterator*, %struct.trace_iterator** %2, align 8
  %19 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %18, i32 0, i32 1
  %20 = load i64*, i64** %19, align 8
  %21 = load %struct.trace_iterator*, %struct.trace_iterator** %2, align 8
  %22 = getelementptr inbounds %struct.trace_iterator, %struct.trace_iterator* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds i64, i64* %20, i64 %23
  %25 = load i64, i64* %24, align 8
  %26 = call i32 @ring_buffer_read(i64 %25, i32* null)
  br label %27

27:                                               ; preds = %17, %1
  %28 = call i32 (...) @ftrace_enable_cpu()
  ret void
}

declare dso_local i32 @ftrace_disable_cpu(...) #1

declare dso_local i32 @ring_buffer_read(i64, i32*) #1

declare dso_local i32 @ftrace_enable_cpu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
